--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ addons: # ensure that Travis-CI provisions a DB for our test:
 env:
   - MIX_ENV=test
 script: # run the tests:
-  - mix test
+  - mix cover
