--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: elixir
+elixir:
+  - 1.6
+otp_release:
+  - 20.3
 addons: # ensure that Travis-CI provisions a DB for our test:
   postgresql: '9.5'
 env:
