--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -8,17 +8,15 @@ on:
 
 jobs:
   build:
-
     name: Build and test
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Elixir
       uses: erlef/setup-elixir@885971a72ed1f9240973bd92ab57af8c1aa68f24
       with:
-        elixir-version: '1.10.3' # Define the elixir version [required]
-        otp-version: '22.3' # Define the OTP version [required]
+        elixir-version: '1.12.3' # Define the elixir version [required]
+        otp-version: '24.0.2' # Define the OTP version [required]
     - name: Restore dependencies cache
       uses: actions/cache@v2
       with:
@@ -27,5 +25,11 @@ jobs:
         restore-keys: ${{ runner.os }}-mix-
     - name: Install dependencies
       run: mix deps.get
-    - name: Run tests
-      run: mix test
+    - name: Run Tests
+      run: mix coveralls.json
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        MIX_ENV: test
+        # AUTH_API_KEY: 2PzB7PPnpuLsbWmWtXpGyI+kfSQSQ1zUW2Atz/+8PdZuSEJzHgzGnJWV35nTKRwx
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
