Updating project with new Phoenix Generator (v1.6.14)
Adding new finished project with updated readme.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,26 @@
-# Elixir/Erlang Defaults
-*.beam
+# The directory Mix will write compiled artifacts to.
+/_build/
 
-# App artifacts
-/_build
-/db
-/deps
-/*.ez
+# If you run "mix test --cover", coverage assets end up here.
+/cover/
+
+# The directory Mix downloads your dependencies sources to.
+/deps/
+
+# Where 3rd-party dependencies like ExDoc output generated docs.
+/doc/
+
+# Ignore .fetch files in case you like to edit your project deps locally.
+/.fetch
+
+# If the VM crashes, it generates a dump, let's ignore it too.
+erl_crash.dump
+
+# Also ignore archive artifacts (built via "mix archive.build").
+*.ez
+
+# Ignore package tarball (built via "mix hex.build").
+chat-*.tar
 
 # Ignore assets that are produced by build tools.
 /priv/static/assets/
@@ -13,28 +28,7 @@
 # Ignore digested assets cache.
 /priv/static/cache_manifest.json
 
-# Generated on crash by the VM
-erl_crash.dump
-
-# Generated on crash by NPM
+# In case you use Node.js/npm, you want to ignore these.
 npm-debug.log
+/assets/node_modules/
 
-# Static artifacts
-/assets/node_modules
-
-# Files matching config/*.secret.exs pattern contain sensitive
-# data and you should not commit them into version control.
-#
-# Alternatively, you may comment the line below and commit the
-# secrets files as long as you replace their contents by environment
-# variables.
-/config/*.secret.exs
-.hello
-/cover
-/docs
-
-# avoid adding data to .git
-production.dump
-package-lock.json
-.DS_Store
-.env
