--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ chat-*.tar
 
 # Ignore assets that are produced by build tools.
 /priv/static/assets/
+/priv/static
 
 # Ignore digested assets cache.
 /priv/static/cache_manifest.json
