--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up Elixir
-      uses: erlef/setup-elixir@885971a72ed1f9240973bd92ab57af8c1aa68f24
+      uses: erlef/setup-beam@v1
       with:
-        elixir-version: '1.14.0' # Define the elixir version [required]
+        elixir-version: '1.14.2' # Define the elixir version [required]
         otp-version: '24.3.4' # Define the OTP version [required]
     - name: Restore dependencies cache
       uses: actions/cache@v2
